@@ -1,3 +1,7 @@
+2009-12-31 Serdar Dalgıç <serdar@pardus.org.tr>
+		* pisi/cli/history.py: Do not give permission to takeback system to
+		the initial state which is always `pardus-cd repository is updated.` .
+
 2009-12-21 Gökçen Eraslan <gokcen@pardus.org.tr>
 		* pisi/actionsapi/cmaketools.py: Change CMake build type to
 		RelWithDebInfo to get faster KDE packages.
